--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Iceland Events</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign In</string>
+    <string name="get_event_btn">Button</string>
+    <string name="sign_in">Sign In</string>
+    <string name="skip_btn">Skip</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
