--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="skip_btn">Skip</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="text_view">TextView!!!</string>
 </resources>
