--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,20 @@
     <string name="app_name">Iceland Events</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign In</string>
-    <string name="get_event_btn">Button</string>
+    <string name="get_event_btn">Event</string>
     <string name="sign_in">Sign In</string>
     <string name="skip_btn">Skip</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="text_view">TextView!!!</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="your_name">Your name</string>
+    <string name="your_email">Your Email</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="confirm_your_password">Confirm your Password</string>
+    <string name="back_btn">Back</string>
+    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
+    <string name="title_activity_create_event">CreateEventActivity</string>
+    <string name="title_activity_my_event">MyEventActivity</string>
+    <string name="title_activity_edit_event">EditEventActivity</string>
 </resources>
