--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="title_activity_create_event">CreateEventActivity</string>
     <string name="title_activity_my_event">MyEventActivity</string>
     <string name="title_activity_edit_event">EditEventActivity</string>
+    <string name="title_activity_prufa">prufaActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_prufa2">prufa2Activity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
