forgot-password útlit, einhverjir fleiri takkar og nöfn í strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="skip_btn">Skip</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="forgot_password_btn">Forgot password</string>
+    <string name="enter_email_editText">Enter your email</string>
+    <string name="resetPasswordBtn">Reset password</string>
     <string name="text_view">TextView!!!</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="your_name">Your name</string>
