--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_prufa2">prufa2Activity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_reset_password">ResetPasswordActivity</string>
 </resources>
