vara að vinna í calander og hreinsa til og það er erro í myEventActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_reset_password">Reset Password</string>
     <string name="title_activity_image">image</string>
+    <string name="choose_a_date">Choose a date</string>
 
 
 </resources>
